--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -19,8 +19,13 @@ body {
 }
 
 #unity-container {
-    width: 100%;
-    height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 9999;
 }
 
 #unity-canvas {
