--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -22,8 +22,8 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: min(100vw, 100vh);
+  height: min(100vw, 100vh);
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 9999;
 }
