--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -19,35 +19,26 @@ body {
 }
 
 #unity-container {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: min(100vw, 100vh);
-  height: min(100vw, 100vh);
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 9999;
+    width: 100%;
+    height: 100%;
 }
 
 #unity-canvas {
-    width: 100%;
-    height: 100%;
-    background: #7f7f7f;
+  background-image: url("rere.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 #loading-cover {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(255, 255, 255, 0.8);
-  z-index: 9999;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: contain;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #unity-loading-bar {
