--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -24,10 +24,9 @@ body {
 }
 
 #unity-canvas {
-  background-image: url("rere.png");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
+    background: #7f7f7f;
 }
 
 #loading-cover {
