--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -24,9 +24,10 @@ body {
 }
 
 #unity-canvas {
-    width: 100%;
-    height: 100%;
-    background: #7f7f7f;
+  background-image: url("rere.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 #loading-cover {
