--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -25,9 +25,8 @@ body {
 
 #unity-canvas {
   background-image: url("rere.png");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
+  width: 100%;
+  height: 100%;
 }
 
 #loading-cover {
