--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -45,6 +45,8 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    
+    
 }
 
 #unity-logo {
@@ -52,16 +54,26 @@ body {
 }
 
 #unity-logo img {
-    max-width: 80%;
+    max-width: 60%;
 }
 
 #unity-progress-bar-empty {
+
+    position: absolute;
+    top: 90%;
+    left: 35%;
+    
+    display: flex;
+    justify-content: center;
+    align-items: end;
+
     width: 30%;
     height: 15px;
-    margin: 10px 20px -300px 10px;
-    text-align: left;
+    margin: 10px 20px 20px 10px;
+    text-align: center;
     border: 1px solid black;
-    padding: 2px;
+    padding: 2px; 
+       
 }
 
 #unity-progress-bar-full {
@@ -79,12 +91,20 @@ body {
 }
 
 #unity-label {
-    position: relative;
-    top: 100px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: end;
+    
     font-size: 35px;
     text-align: center;
-    font-family: lilita one, bold;
+    font-family:'Lilita One', cursive;
     color: #eadf33;
+        
 }
 
 .spinner,
